--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -2,10 +2,10 @@
 #
 
 name: first workflow
-on: push # 이벤트 트리거
-jobs: # jobs:
-  hello_world: # job의 이름
+on: push
+jobs:
+  build:
     runs-on: ubuntu-latest
-    steps: # step 정의
-      - name: Hello World # step의 이름
-        run: echo "Hello, World!" # run : <cli 명령어>
+    steps:
+      - name: Hello world
+        run: echo "Hello, world!"
