--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -9,3 +9,9 @@ jobs:
     steps:
       - name: Hello world
         run: echo "Hello, world!"
+
+      - name: Checkout code
+        uses: actions/checkout@v4 # actions 재사용 가능한 작업
+
+      - name: install dependencies
+        run: npm ci
