--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -7,11 +7,34 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Hello world
-        run: echo "Hello, world!"
-
       - name: Checkout code
         uses: actions/checkout@v4 # actions 재사용 가능한 작업
 
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '22'
+
       - name: install dependencies
         run: npm ci
+
+      - name: build
+        run: npm run build
+
+  #run lint
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '22'
+
+      - name: install dependencies
+        run: npm ci
+
+      - name: Run ESLint
+        run: npm run lint
